# VoiceOrder

./: .env.example  .gitignore  COST_ANALYSIS.md  MARKET_RESEARCH.md  Makefile  README.md  SRS.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-server.yml
agent/: .env.example  Dockerfile  README.md  pyproject.toml
agent/src/voiceorder/: agent.py  api_client.py  prompts.py  tools.py
dashboard/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/forgot-password/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/register/: page.tsx
dashboard/src/app/reset-password/: page.tsx
dashboard/src/app/signup/: page.tsx
dashboard/src/components/dashboard/: analytics-charts.tsx  app-sidebar.tsx  call-transcript-dialog.tsx  call-volume-chart.tsx  calls-table.tsx  dashboard-header.tsx  kpi-card.tsx  menu-category-tabs.tsx  menu-item-card.tsx  order-detail-sheet.tsx  order-status-pipeline.tsx  orders-table.tsx  page-transition.tsx  (+4 more)
dashboard/src/context/: auth-context.tsx
dashboard/src/data/: mock-analytics.ts  mock-business.ts  mock-calls.ts  mock-menu.ts  mock-orders.ts  types.ts
dashboard/src/hooks/: use-animated-counter.ts
dashboard/src/lib/: api.ts  auth-context.tsx  constants.ts  format.ts
deploy/: ec2-setup.sh
server/: .env.example  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 269420c6538d_initial_schema.py
server/src/voiceorder_server/: auth.py  config.py  database.py  dependencies.py  email.py  main.py  schemas.py  seed.py  setup_sip.py
server/src/voiceorder_server/models/: __init__.py  appointment.py  base.py  business.py  call.py  faq.py  menu.py  order.py  user.py
server/src/voiceorder_server/routers/: appointments.py  auth.py  businesses.py  calls.py  faq.py  providers.py
server/src/voiceorder_server/routes/: auth.py
(+12 files in other folders)
